firefox: fixed sidebar not showing up and changed visuals

--- a/.config/firefox/userChrome.css
+++ b/.config/firefox/userChrome.css
@@ -1,8 +1,3 @@
-/* Make the toolbar border a little more visible */
-:root, :host(.anonymous-content-host) {
-  --border-color-card: color-mix(in srgb, currentColor 20%, transparent) !important;
-}
-
 html { min-width: 0 !important; }
 
 /* Hide some unimportant stuff from the toolbar */
@@ -12,46 +7,9 @@ html { min-width: 0 !important; }
   display: none !important;
 }
 
-/* Ctrl+Tab menu */
-
-.ctrlTab-preview .ctrlTab-canvas {
-  display: none !important;
-}
-
-#ctrlTab-previews {
-  flex-direction: column !important;
-  gap: 20px;
-}
-
-#ctrlTab-panel {
-  width: max-content !important;
-
-  transition: none !important;
-
-  left: unset !important;
-  right: unset !important;
-  top: unset !important;
-  bottom: unset !important;
-}
-
-.ctrlTab-preview-inner {
-  width: 500px;
-  flex-direction: row;
-}
-
-.ctrlTab-favicon {
-  margin-top: 0 !important;
-}
-
-.ctrlTab-label {
-  justify-content: left !important;
-  padding-left: 20px;
-  padding-top: 13px;
-}
-
 /* Hide bottommost icons in the collapsed sidebar  */
-button[title^="Bitwarden"], button[title="Customize sidebar"] {
-  display: none !important;
+button[title="Customize sidebar"] {
+  visibility: hidden !important;
 } 
 
 /* Hide "music playing" icon on tabs */
@@ -72,4 +30,8 @@ image.tab-icon-overlay[soundplaying] {
 
 #tabbrowser-tabbox {
   box-shadow: none !important;
+  outline: 1px inset var(--tab-selected-outline-color) !important;
+  border-top-left-radius: 8px;
+  outline-offset: 1px;
+  overflow: hidden;
 }
